--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,10 @@
           </ion-card-header>
           <ion-card-content>
             <ion-list >
-              <ion-item><a href="{{beaconData.url}}" target="_blank">{{beaconData.url}}</a></ion-item>
+              <ion-item>{{random}}</ion-item>
+              <!-- <ion-item><a href="{{beaconData.url}}" target="_blank">{{beaconData.url}}</a></ion-item> -->
+              <ion-item>{{beaconData.address}}</ion-item>
+              <ion-item><a href="{{beaconData.www}}" target="_blank">{{beaconData.www}}</a></ion-item>
             </ion-list>
           </ion-card-content>
         </ion-card>
