Display beacon information

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,34 +1,37 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Ionic + Beacons</ion-title>
+    <ion-title>Smarturbem</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <div *ngIf="!beaconData; else beaconFound">
-    <ion-card>
+
+  <div *ngIf="beaconData">
+    <!-- <ion-card>
       <ion-card-header>
         Beacons
       </ion-card-header>
       <ion-card-content>
         <button ion-button (click)="startScanForBeacones()">Start Scan</button>
       </ion-card-content>
+    </ion-card> -->
+
+    <ion-card>
+      {{random}}
+      <img src="{{beaconData.data.img}}" />
+      <ion-card-content>
+        <ion-card-title>
+          {{beaconData.data.title}}
+        </ion-card-title>
+        <p>
+          {{beaconData.data.body}}
+        </p>
+      </ion-card-content>
     </ion-card>
+
   </div>
 
-  <ng-template #beaconFound>
-      <ion-card>
-          <ion-card-header>
-            Beacons Found
-          </ion-card-header>
-          <ion-card-content>
-            <ion-list >
-              <ion-item>{{random}}</ion-item>
-              <!-- <ion-item><a href="{{beaconData.url}}" target="_blank">{{beaconData.url}}</a></ion-item> -->
-              <ion-item>{{beaconData.address}}</ion-item>
-              <ion-item><a href="{{beaconData.www}}" target="_blank">{{beaconData.www}}</a></ion-item>
-            </ion-list>
-          </ion-card-content>
-        </ion-card>
-  </ng-template>
+  <!-- <ng-template #beaconFound>
+    
+  </ng-template> -->
 </ion-content>
