--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
     </ion-card> -->
 
     <ion-card>
-      {{random}}
+      <!-- {{random}} -->
       <img src="{{beaconData.data.img}}" />
       <ion-card-content>
         <ion-card-title>
